[fix] 修正header z-index

--- a/assets/scss/custom/_header.scss
+++ b/assets/scss/custom/_header.scss
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 100;
+    z-index: 101;
     position: fixed;
     padding: 2.4rem 0;
     background-color: map-get($colors, white);
