--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -13764,7 +13764,7 @@ body main {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 101;
   position: fixed;
   padding: 2.4rem 0;
   background-color: #ffffff;
